crates/rome_formatter/tests/specs/prettier/typescript/decorators-ts/mobx.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: mobx.ts

---
# Input
```js
class X {
	@deco x() {
      return this.count * 2;
	}
	@deco get x() {
      return this.count * 2;
	}
}

```

# Output
```js
class X {
  @
  deco;
  x() {
    return this.count * 2;
  }
  @
  deco;
  get x() {
    return this.count * 2;
  }
}

```

# Errors
```
error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ mobx.ts:2:2
  │
2 │     @deco x() {
  │     ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon for a class property, but found none
  ┌─ mobx.ts:2:3
  │
2 │     @deco x() {
  │      ^^^^^

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
  ┌─ mobx.ts:5:2
  │
5 │     @deco get x() {
  │     ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a semicolon for a class property, but found none
  ┌─ mobx.ts:5:3
  │
5 │     @deco get x() {
  │      ^^^^^


```


